# robot-arm-sim

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  viewer.py
configs/: default.yaml  robust_cbf.yaml
csrc/: bindings.cpp
csrc/cbf_core/: barrier.cpp  barrier.h  cbf_solver.cpp  cbf_solver.h  qp_solver.cpp  qp_solver.h
docs/: configuration_guide.md
example/: control.py
src/robot_arm_sim/: main.py
src/robot_arm_sim/config/: manager.py
src/robot_arm_sim/controller/: clbf_controller.py  pd_controller.py  robust_cbf_controller.py
src/robot_arm_sim/data/: engine.py
src/robot_arm_sim/dynamics/: pinocchio_model.py
src/robot_arm_sim/interfaces/: __init__.py  controller.py  simulator.py
src/robot_arm_sim/simulator/: pybullet_sim.py
src/robot_arm_sim/visualization/: analytics.py  viewer.py
