[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "robot-arm-sim"
version = "0.1.0"
description = "7-DOF robot arm safe control simulation with PyBullet and Pinocchio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=3.0.1",
    "pin>=3.9.0",
    "pybullet>=3.2.7",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
robot-arm-sim = "robot_arm_sim.main:main"

[tool.scikit-build]
wheel.install-dir = "."
cmake.source-dir = "."
cmake.build-type = "Release"
wheel.packages = ["src/robot_arm_sim"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
